--- a/teatro.html
+++ b/teatro.html
@@ -23,8 +23,30 @@
         </nav>
     </header>
     <main>
-        <section>
-            
+        <section id="carrusel">
+            <h4>VIE 12 y SÁB 13 | 22:00 hs</h4>
+            <h1>CorpóriCa</h1>
+            <h3>Obra de danza-teatro y multimedia</h3>
+            <a href="#">MAS INFO</a>
+            <a href="#">COMPRAR ENTRADAS</a>
+
+        </section>
+        <section id="historia">
+            <div>
+                <h4>130 años de</h4>
+                <h2>Historia</h2>
+                <p>
+                    Y más de 80 años ofreciendo espectáculos y propuestas
+                    culturales de calidad a la comunidad, producidos de
+                    forma integral por artistas, profesionales y personal
+                    especializado.
+                </p>
+                <a href="#">VER MAS</a>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+
         </section>
     </main>
     
